--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#9C27B0"
-    tools:context=".StartFragment">
+    tools:context=".Views.starter.StartFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
