--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Views.dashboard.DashBoardFragment">
+    tools:context=".Views.dashboard.DashBoardFragment"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@color/black">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="This is Dashboard"
+        android:textColor="#E91E63"
+        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
 
-</FrameLayout>
+</LinearLayout>
