--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -33,13 +33,18 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_32sdp"
         android:layout_marginVertical="@dimen/_4sdp"
-        android:hint="@string/user_name">
+        android:hint="@string/user_name"
+        app:helperTextTextColor="#FF0202"
+        app:helperTextEnabled="true"
+        android:id="@+id/nameContainer"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="text" />
+            android:inputType="text"
+            android:lines="1"/>
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -52,13 +57,16 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_32sdp"
         android:layout_marginVertical="@dimen/_4sdp"
-        android:hint="@string/user_email">
+        android:hint="@string/user_email"
+        app:helperTextTextColor="#FF0202"
+        android:id="@+id/emailContainer">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:lines="1" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -70,13 +78,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_32sdp"
-        android:hint="@string/user_password">
+        android:hint="@string/user_password"
+        app:helperTextTextColor="#FF0202"
+        app:helperTextEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        android:id="@+id/passwordContainer">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textWebPassword" />
+            android:inputType="textWebPassword"
+            android:lines="1"
+            android:maxLength="20"/>
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -85,7 +100,8 @@
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_8sdp">
+        android:layout_marginTop="@dimen/_8sdp"
+        >
         <Button
             android:id="@+id/btnCustomer"
             android:layout_width="wrap_content"
@@ -148,3 +164,8 @@
         android:textSize="@dimen/_16sdp" />
 
 </LinearLayout>
+
+
+
+
+
