--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Views.login.LoginFragment"
-    android:background="#FFFFFF">
+    tools:context=".Views.login.LoginFragment">
 
     <ImageView
         android:layout_width="140dp"
@@ -29,18 +29,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_32sdp"
+        android:layout_marginVertical="@dimen/_4sdp"
         android:hint="@string/user_email"
         app:endIconMode="clear_text"
+        app:helperText="Required"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#FB0101"
         app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
-        android:layout_marginVertical="@dimen/_4sdp">
+        app:hintEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textEmailAddress" />
-
+            android:inputType="textEmailAddress"
+            android:lines="1"
+            android:textColor="@color/black" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -49,7 +53,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_32sdp"
         android:hint="@string/user_password"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:endIconMode="password_toggle"
+        app:helperText="Required"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#FB0101"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true">
 
@@ -57,24 +66,25 @@
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textWebPassword" />
-
-
+            android:inputType="textWebPassword"
+            android:lines="1"
+            android:maxLength="20"
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:layout_marginTop="@dimen/_32sdp"
         android:id="@+id/btn_login"
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_32sdp"
+        android:layout_marginTop="@dimen/_32sdp"
+        android:backgroundTint="#FF304F"
         android:text="@string/login"
         android:textColor="#040E47"
         android:textSize="@dimen/_16sdp"
         app:strokeColor="#FF304F"
-        app:strokeWidth="@dimen/_2sdp"
-        android:backgroundTint="#FF304F"/>
+        app:strokeWidth="@dimen/_2sdp" />
 
     <TextView
         android:layout_width="match_parent"
